added logged_in? and current_user helper methods and added attributes to users#show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
 <h1>Hello, <%= @user.username %></h1>
+
+<h2>Correct picks: <%= @user.correct_picks %></h2>
+<h2>Incorrect picks: <%= @user.incorrect_picks%></h2>
