stubbed out users#index page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello, <%= @user.username %></h1>
+<h1><u>Hello, <%= @user.username %></u></h1>
 
-<h2>Correct picks: <%= @user.correct_picks %></h2>
-<h2>Incorrect picks: <%= @user.incorrect_picks%></h2>
+<p><strong>Correct picks</strong>: <%= @user.correct_picks %></p>
+<p><em>Incorrect picks</em>: <%= @user.incorrect_picks%></p>
