--- a/app/views/picks/new.html.erb
+++ b/app/views/picks/new.html.erb
@@ -1,1 +1,52 @@
-<h1>Testing, today's picks will go here</h1> 
+<h1>Testing, today's picks will go here</h1>
+
+
+<div id="games">
+</div>
+
+<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+<script type="text/javascript">
+Handlebars.registerHelper('convertDateTime', function(date) {
+  const dateTime = new Date(date)
+  const formattedDateTime = dateTime.toLocaleString(undefined, {
+      day: 'numeric',
+      month: 'long',
+      year: 'numeric',
+  })
+  return formattedDateTime
+})
+  $(function () {
+    $.get("https://statsapi.mlb.com/api/v1/schedule/games/?sportId=1", function(data) {
+      const template = Handlebars.compile(document.getElementById("game-info").innerHTML)
+      const result = template(data.dates)
+      console.log(data.dates[0].games)
+      document.getElementById("games").innerHTML = result
+    })
+  })
+</script>
+
+<script id="game-info" type="text/x-handlebars-template">
+
+    <section display="center">
+      {{#each this}}
+      <h1>{{convertDateTime date}}</h1>
+        {{#each games}}
+        <div class="game">
+        <p>{{teams.away.team.name}}  ({{teams.away.leagueRecord.wins}} - {{teams.away.leagueRecord.losses}})</p>
+
+        <button>Pick {{teams.away.team.name}}</button>
+
+        <h2>{{teams.away.score}}</h2>
+        <h3>at</h3>
+        <h2>{{teams.home.score}}</h2>
+
+        <button>Pick {{teams.home.team.name}}</button>
+
+        <p>{{teams.home.team.name}}   ({{teams.home.leagueRecord.wins}} - {{teams.home.leagueRecord.losses}})</p>
+      </div>
+          {{/each}}
+      {{/each}}
+    </section>
+
+</script>
